Cherry-picked backwards-compatible changes from dev